2005-06-01 Victor Lazzarini <Victor.Lazzarini@nuim.ie>
       * Opcodes/pvsbasic.c pvsbasic.h
       added opcode pvsinit for fsig initialisation

2005-05-31	Istvan Varga	<istvan@csounds.com>
	* Engine/otran.c:
	  allow global f-signals
	  code changes for faster name lookup in global/local pools
	* Engine/rdorch.c:
	  store line numbers in variables of type 'int' rather than 'short'
	  TODO: clean up file reading (correct handling of EOL characters,
	        use csoundFileOpen(), do not depend on being able to call
		ungetc() multiple times)
		probaly the same needs to be done in sread.c as well
	* H/oload.h:
	  removed many unused typedefs and macros
	* OOps/fftlib.c:
	  fixed crash on 64 bit platforms
	  minor code changes

2005-05-30	Istvan Varga	<istvan@csounds.com>
	* New API functions:
	    csoundAppendOpcodes():
	      appends a list of opcodes (OENTRY*)
	    csoundRegisterResetCallback():
	      adds a function to be called by csoundReset()
	* Top/dl_opcodes.c:
	  unload plugin opcodes (called from csoundReset())
	* Top/dl_opcodes.c, Top/main.c:
	  use API functions for adding opcodes, rather than changing
	  opcodlst directly

2005-05-30  Michael Gogins <gogins@pipeline.com>
	* CsoundVST now supports multiple instantiation of VST plugins;
	it is not completely stable yet.
	* The Mixer opcodes now support multiple instantiation of Csound.
	* OpcodeBase.hpp now works with the new OENTRY structure.
	The OpcodeBase class now automatically registers a deinit callback,
	which by default does nothing.
	* The C++ STK opcodes now use RegisterDeinitCallback
	and the csoundModule* initialization and deinitialization routines.

2005-05-27  Steven Yi  <stevenyi@gmail.com>
	* Opcodes/fluidOpcodes/fluidOpcodes.cpp: modified fluidNote to use
	RegisterDeinitCallback, removed krate function call

2005-05-27	Istvan Varga	<istvan@csounds.com>
	* Added new API functions:
	    csoundListUtilities():
	      returns alphabetically sorted list of registered utilities